--- a/examples/common.css
+++ b/examples/common.css
@@ -1,7 +1,9 @@
 .rc-tabs {
-  outline: none;
   box-sizing: border-box;
   position: relative;
+}
+.rc-tabs-bar {
+  outline: none;
 }
 .rc-tabs-ink-bar {
   z-index: 1;
@@ -103,7 +105,7 @@
 }
 .rc-tabs-nav .rc-tabs-tab > .rc-tabs-tab-inner {
   -webkit-transition: color 0.3s cubic-bezier(0.35, 0, 0.25, 1);
-          transition: color 0.3s cubic-bezier(0.35, 0, 0.25, 1);
+  transition: color 0.3s cubic-bezier(0.35, 0, 0.25, 1);
   padding: 8px 20px;
   font-weight: 500;
   display: inline-block;
@@ -130,7 +132,9 @@
   -webkit-transform: translateX(0) translateZ(0);
           transform: translateX(0) translateZ(0);
   -webkit-transition: -webkit-transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
-          transition: transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
+  transition: -webkit-transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
+  transition: transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
+  transition: transform 0.3s cubic-bezier(0.35, 0, 0.25, 1), -webkit-transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
 }
 .rc-tabs-slide-horizontal-backward-leave {
   overflow: hidden;
@@ -146,7 +150,9 @@
   -webkit-transform: translateX(100%) translateZ(0);
           transform: translateX(100%) translateZ(0);
   -webkit-transition: -webkit-transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
-          transition: transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
+  transition: -webkit-transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
+  transition: transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
+  transition: transform 0.3s cubic-bezier(0.35, 0, 0.25, 1), -webkit-transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
 }
 .rc-tabs-slide-horizontal-forward-enter {
   -webkit-transform: translateX(100%);
@@ -156,7 +162,9 @@
   -webkit-transform: translateX(0) translateZ(0);
           transform: translateX(0) translateZ(0);
   -webkit-transition: -webkit-transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
-          transition: transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
+  transition: -webkit-transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
+  transition: transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
+  transition: transform 0.3s cubic-bezier(0.35, 0, 0.25, 1), -webkit-transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
 }
 .rc-tabs-slide-horizontal-forward-leave {
   overflow: hidden;
@@ -172,7 +180,9 @@
   -webkit-transform: translateX(-100%) translateZ(0);
           transform: translateX(-100%) translateZ(0);
   -webkit-transition: -webkit-transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
-          transition: transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
+  transition: -webkit-transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
+  transition: transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
+  transition: transform 0.3s cubic-bezier(0.35, 0, 0.25, 1), -webkit-transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
 }
 .rc-tabs-slide-vertical-backward-enter {
   -webkit-transform: translateY(-100%);
@@ -182,7 +192,9 @@
   -webkit-transform: translateY(0) translateZ(0);
           transform: translateY(0) translateZ(0);
   -webkit-transition: -webkit-transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
-          transition: transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
+  transition: -webkit-transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
+  transition: transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
+  transition: transform 0.3s cubic-bezier(0.35, 0, 0.25, 1), -webkit-transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
 }
 .rc-tabs-slide-vertical-backward-leave {
   overflow: hidden;
@@ -198,7 +210,9 @@
   -webkit-transform: translateY(100%) translateZ(0);
           transform: translateY(100%) translateZ(0);
   -webkit-transition: -webkit-transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
-          transition: transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
+  transition: -webkit-transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
+  transition: transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
+  transition: transform 0.3s cubic-bezier(0.35, 0, 0.25, 1), -webkit-transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
 }
 .rc-tabs-slide-vertical-forward-enter {
   -webkit-transform: translateY(100%);
@@ -208,7 +222,9 @@
   -webkit-transform: translateY(0) translateZ(0);
           transform: translateY(0) translateZ(0);
   -webkit-transition: -webkit-transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
-          transition: transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
+  transition: -webkit-transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
+  transition: transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
+  transition: transform 0.3s cubic-bezier(0.35, 0, 0.25, 1), -webkit-transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
 }
 .rc-tabs-slide-vertical-forward-leave {
   overflow: hidden;
@@ -224,12 +240,14 @@
   -webkit-transform: translateY(-100%);
           transform: translateY(-100%);
   -webkit-transition: -webkit-transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
-          transition: transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
+  transition: -webkit-transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
+  transition: transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
+  transition: transform 0.3s cubic-bezier(0.35, 0, 0.25, 1), -webkit-transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
 }
 .rc-tabs-left {
   border-right: 2px solid #f3f3f3;
 }
-.rc-tabs-left .rc-tabs-tabs-bar {
+.rc-tabs-left .rc-tabs-bar {
   float: left;
   margin-right: 10px;
   border-right: 1px solid #f3f3f3;
@@ -249,7 +267,7 @@
 }
 .rc-tabs-left .rc-tabs-nav {
   -webkit-transition: top 0.5s cubic-bezier(0.35, 0, 0.25, 1);
-          transition: top 0.5s cubic-bezier(0.35, 0, 0.25, 1);
+  transition: top 0.5s cubic-bezier(0.35, 0, 0.25, 1);
 }
 .rc-tabs-left .rc-tabs-tab-prev,
 .rc-tabs-left .rc-tabs-tab-next {
@@ -288,11 +306,11 @@
 }
 .rc-tabs-left .rc-tabs-ink-bar-transition-forward {
   -webkit-transition: bottom 0.3s cubic-bezier(0.35, 0, 0.25, 1), top 0.3s cubic-bezier(0.35, 0, 0.25, 1) 0.09s;
-          transition: bottom 0.3s cubic-bezier(0.35, 0, 0.25, 1), top 0.3s cubic-bezier(0.35, 0, 0.25, 1) 0.09s;
+  transition: bottom 0.3s cubic-bezier(0.35, 0, 0.25, 1), top 0.3s cubic-bezier(0.35, 0, 0.25, 1) 0.09s;
 }
 .rc-tabs-left .rc-tabs-ink-bar-transition-backward {
   -webkit-transition: bottom 0.3s cubic-bezier(0.35, 0, 0.25, 1) 0.09s, top 0.3s cubic-bezier(0.35, 0, 0.25, 1);
-          transition: bottom 0.3s cubic-bezier(0.35, 0, 0.25, 1) 0.09s, top 0.3s cubic-bezier(0.35, 0, 0.25, 1);
+  transition: bottom 0.3s cubic-bezier(0.35, 0, 0.25, 1) 0.09s, top 0.3s cubic-bezier(0.35, 0, 0.25, 1);
 }
 .rc-tabs-left .rc-tabs-nav .rc-tabs-tab {
   padding: 16px 24px;
@@ -300,7 +318,7 @@
 .rc-tabs-right {
   border-left: 2px solid #f3f3f3;
 }
-.rc-tabs-right .rc-tabs-tabs-bar {
+.rc-tabs-right .rc-tabs-bar {
   float: right;
   margin-left: 10px;
   border-left: 1px solid #f3f3f3;
@@ -317,7 +335,7 @@
 }
 .rc-tabs-right .rc-tabs-nav {
   -webkit-transition: top 0.5s cubic-bezier(0.35, 0, 0.25, 1);
-          transition: top 0.5s cubic-bezier(0.35, 0, 0.25, 1);
+  transition: top 0.5s cubic-bezier(0.35, 0, 0.25, 1);
 }
 .rc-tabs-right .rc-tabs-tab-prev,
 .rc-tabs-right .rc-tabs-tab-next {
@@ -359,11 +377,11 @@
 }
 .rc-tabs-right .rc-tabs-ink-bar-transition-forward {
   -webkit-transition: bottom 0.3s cubic-bezier(0.35, 0, 0.25, 1), top 0.3s cubic-bezier(0.35, 0, 0.25, 1) 0.09s;
-          transition: bottom 0.3s cubic-bezier(0.35, 0, 0.25, 1), top 0.3s cubic-bezier(0.35, 0, 0.25, 1) 0.09s;
+  transition: bottom 0.3s cubic-bezier(0.35, 0, 0.25, 1), top 0.3s cubic-bezier(0.35, 0, 0.25, 1) 0.09s;
 }
 .rc-tabs-right .rc-tabs-ink-bar-transition-backward {
   -webkit-transition: bottom 0.3s cubic-bezier(0.35, 0, 0.25, 1) 0.09s, top 0.3s cubic-bezier(0.35, 0, 0.25, 1);
-          transition: bottom 0.3s cubic-bezier(0.35, 0, 0.25, 1) 0.09s, top 0.3s cubic-bezier(0.35, 0, 0.25, 1);
+  transition: bottom 0.3s cubic-bezier(0.35, 0, 0.25, 1) 0.09s, top 0.3s cubic-bezier(0.35, 0, 0.25, 1);
 }
 .rc-tabs-right .rc-tabs-nav .rc-tabs-tab {
   padding: 16px 24px;
@@ -371,7 +389,7 @@
 .rc-tabs-bottom {
   border-top: 2px solid #f3f3f3;
 }
-.rc-tabs-bottom .rc-tabs-tabs-bar {
+.rc-tabs-bottom .rc-tabs-bar {
   border-top: 1px solid #f3f3f3;
 }
 .rc-tabs-bottom .rc-tabs-nav-container-scrolling {
@@ -389,7 +407,7 @@
 }
 .rc-tabs-bottom .rc-tabs-nav {
   -webkit-transition: left 0.5s cubic-bezier(0.35, 0, 0.25, 1);
-          transition: left 0.5s cubic-bezier(0.35, 0, 0.25, 1);
+  transition: left 0.5s cubic-bezier(0.35, 0, 0.25, 1);
 }
 .rc-tabs-bottom .rc-tabs-tab-next {
   right: 2px;
@@ -418,11 +436,11 @@
 }
 .rc-tabs-bottom .rc-tabs-ink-bar-transition-forward {
   -webkit-transition: right 0.3s cubic-bezier(0.35, 0, 0.25, 1), left 0.3s cubic-bezier(0.35, 0, 0.25, 1) 0.09s;
-          transition: right 0.3s cubic-bezier(0.35, 0, 0.25, 1), left 0.3s cubic-bezier(0.35, 0, 0.25, 1) 0.09s;
+  transition: right 0.3s cubic-bezier(0.35, 0, 0.25, 1), left 0.3s cubic-bezier(0.35, 0, 0.25, 1) 0.09s;
 }
 .rc-tabs-bottom .rc-tabs-ink-bar-transition-backward {
   -webkit-transition: right 0.3s cubic-bezier(0.35, 0, 0.25, 1) 0.09s, left 0.3s cubic-bezier(0.35, 0, 0.25, 1);
-          transition: right 0.3s cubic-bezier(0.35, 0, 0.25, 1) 0.09s, left 0.3s cubic-bezier(0.35, 0, 0.25, 1);
+  transition: right 0.3s cubic-bezier(0.35, 0, 0.25, 1) 0.09s, left 0.3s cubic-bezier(0.35, 0, 0.25, 1);
 }
 .rc-tabs-bottom .rc-tabs-nav .rc-tabs-tab {
   float: left;
@@ -432,7 +450,7 @@
 .rc-tabs-top {
   border-bottom: 2px solid #f3f3f3;
 }
-.rc-tabs-top .rc-tabs-tabs-bar {
+.rc-tabs-top .rc-tabs-bar {
   border-bottom: 1px solid #f3f3f3;
 }
 .rc-tabs-top .rc-tabs-nav-container-scrolling {
@@ -450,7 +468,7 @@
 }
 .rc-tabs-top .rc-tabs-nav {
   -webkit-transition: left 0.5s cubic-bezier(0.35, 0, 0.25, 1);
-          transition: left 0.5s cubic-bezier(0.35, 0, 0.25, 1);
+  transition: left 0.5s cubic-bezier(0.35, 0, 0.25, 1);
 }
 .rc-tabs-top .rc-tabs-tab-next {
   right: 2px;
@@ -479,11 +497,11 @@
 }
 .rc-tabs-top .rc-tabs-ink-bar-transition-forward {
   -webkit-transition: right 0.3s cubic-bezier(0.35, 0, 0.25, 1), left 0.3s cubic-bezier(0.35, 0, 0.25, 1) 0.09s;
-          transition: right 0.3s cubic-bezier(0.35, 0, 0.25, 1), left 0.3s cubic-bezier(0.35, 0, 0.25, 1) 0.09s;
+  transition: right 0.3s cubic-bezier(0.35, 0, 0.25, 1), left 0.3s cubic-bezier(0.35, 0, 0.25, 1) 0.09s;
 }
 .rc-tabs-top .rc-tabs-ink-bar-transition-backward {
   -webkit-transition: right 0.3s cubic-bezier(0.35, 0, 0.25, 1) 0.09s, left 0.3s cubic-bezier(0.35, 0, 0.25, 1);
-          transition: right 0.3s cubic-bezier(0.35, 0, 0.25, 1) 0.09s, left 0.3s cubic-bezier(0.35, 0, 0.25, 1);
+  transition: right 0.3s cubic-bezier(0.35, 0, 0.25, 1) 0.09s, left 0.3s cubic-bezier(0.35, 0, 0.25, 1);
 }
 .rc-tabs-top .rc-tabs-nav .rc-tabs-tab {
   float: left;
