--- a/assets/index/bottom.less
+++ b/assets/index/bottom.less
@@ -1,4 +1,4 @@
-.@{prefixClass} {
+.@{tabs-prefix-cls} {
   &-bottom {
     border-top: 2px solid #f3f3f3;
   }
@@ -20,7 +20,7 @@
     width: 100%;
   }
   
-  &-bottom  &-content {
+  &-bottom &-content {
     width: 100%;
   }
 
@@ -53,7 +53,7 @@
     left:0;
   }
 
-  &-bottom &-nav &-tab {
+  &-bottom &-tab {
     float: left;
     height: 100%;
     margin-right: 30px;
