--- a/assets/index/left.less
+++ b/assets/index/left.less
@@ -1,4 +1,4 @@
-.@{prefixClass} {
+.@{tabs-prefix-cls} {
   &-left {
     border-right: 2px solid #f3f3f3;
   }
@@ -62,7 +62,7 @@
     right: 0;
   }
 
-  &-left &-nav &-tab {
+  &-left &-tab {
     padding: 16px 24px;
   }
 }
