--- a/assets/index/right.less
+++ b/assets/index/right.less
@@ -1,4 +1,4 @@
-.@{prefixClass} {
+.@{tabs-prefix-cls} {
   &-right {
     border-left: 2px solid #f3f3f3;
   }
@@ -62,7 +62,7 @@
     left: 0;
   }
 
-  &-right &-nav &-tab {
+  &-right &-tab {
     padding: 16px 24px;
   }
 }
