--- a/assets/index/top.less
+++ b/assets/index/top.less
@@ -1,4 +1,4 @@
-.@{prefixClass} {
+.@{tabs-prefix-cls} {
   &-top {
     border-bottom: 2px solid #f3f3f3;
   }
@@ -53,7 +53,7 @@
     left: 0;
   }
 
-  &-top &-nav &-tab {
+  &-top &-tab {
     float: left;
     height: 100%;
     margin-right: 30px;
