fix style. Fixes #23

--- a/assets/index/common.less
+++ b/assets/index/common.less
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   position: relative;
 
-  &-bar {
+  &-bar, &-nav-container {
     font-size: 14px;
     line-height: 1.5;
     box-sizing: border-box;
@@ -10,6 +10,7 @@
     position: relative;
     white-space: nowrap;
     outline: none;
+    zoom: 1;
   }
 
   &-ink-bar {
