--- a/assets/index/common.less
+++ b/assets/index/common.less
@@ -131,13 +131,13 @@
     }
   }
 
-  &-content-no-animated {
+  &-content-no-animation {
     .@{tabs-prefix-cls}-tabpane-inactive {
       display: none;
     }
   }
 
-  &-content-animated {
+  &-content-animation {
     transition: transform @effect-duration @easing-in-out;
     display: flex;
     will-change: transform;
