--- a/assets/index/right.less
+++ b/assets/index/right.less
@@ -57,7 +57,7 @@
     }
   }
 
-  &-right &-content-animated {
+  &-right &-content-animation {
     flex-direction: column;
 
     .@{tabs-prefix-cls}-tabpane {
